working landing page

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
 
   <link rel="stylesheet" href="/node_modules/owl.carousel/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="/node_modules/owl.carousel/dist/assets/owl.theme.default.min.css">
+    <base href="/">
 </head>
 
 <body class="relative poppins">
